# rss-list

./: Cargo.toml  README.md  install.sh  rss-list.desktop
assets/css/: app.css
assets/ui/: main.glade
src/: error.rs  main.rs  source.rs  ui.rs
