[package]
name = "rss-list"
version = "0.2.0"
authors = ["Edwin Svensson <rss-list@olback.net>"]
edition = "2018"
build = "build/build.rs"
homepage = "https://github.com/olback/rss-list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14", features = [ "v3_22_30" ] }
giftwrap = "0.3"
feed-rs = "1.0.0"
reqwest = { version = "0.11", features = [ "blocking", "rustls-tls" ], default-features = false }
chrono = "0.4"
rayon = "1"
dirs = "4"
hex = "0.4"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"
